--- a/app/index.html
+++ b/app/index.html
@@ -238,6 +238,39 @@
         </div>
     </section>
 
+    <section class="video-fashion">
+      <div class="container">
+        <div class="video-fashion__inner">
+          <div class="video-fashion__popup" style="background-image: url('images/video-fashion.jpg');">
+            <a class="video-fashion__play" data-fancybox href="https://www.youtube.com/watch?v=S_dfq9rFWAE&t=75s">
+              <img src="images/icons/play-btn.svg" alt="video play button">
+            </a>
+          </div>
+          <div class="video-fashion__content">
+            <p class="video-fashion__subtitle">
+              Winter Collection 20% Off
+            </p>
+            <h2 class="title video-fashion__title">
+              TRENDING FASHION
+            </h2>
+            <p class="text video-fashion__text">
+              Lorem ipsum dolor sit amet, consectetur apiscing elit, sed do eiusmod temp incididunt ut labore et dolore
+              magna aliqua
+              consectetur adipiscing elit, sedu do eiusmod temp indidunt ut labore et dolore magna aliqua.. Quis ipsum
+              de ultcesm.
+              Risus commodo viverra maecenas.
+            </p>
+            <a class="video-fashion__link" href="#">
+              View Now
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
   </main>
 
   <footer class="footer">
